objects/redwing__Learning_Search_Category__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Plural_Learning_Search_Category_Name__c</fullName>
        <label>Plural Learning Search Category Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Learning Search Category</label>
    <nameField>
        <label>Learning Search Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Search Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>